projects/amiya.akn/src/apps/pocket-id/security/reference-grant.cloudflare-gateway-to-pocket-id.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Cloudflare Gateway from the cloudflare-public-gateway-system namespace to access the pocket-id service
      to enable SSO access from the internet.
  name: cloudflare-public-gateway-system-to-pocket-id
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cloudflare-public-gateway-system
  to:
    - group: ""
      kind: Service
      name: pocket-id
