projects/amiya.akn/src/apps/pocket-id/security/reference-grant.envoy-gateway-to-pocket-id.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Cilium Gateway from the in-gateway-system namespace to access the pocket-id service
      to enable SSO access from the local network.
  name: in-gateway-system-to-pocket-id
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: in-gateway-system
  to:
    - group: ""
      kind: Service
      name: pocket-id
